--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -1,8 +1,10 @@
 @use "../design-tokens/_colors";
+@use '../tools/mixins';
 
 .sidebar-container {
     height: 100vh;
-    width: 4rem;
+    width: 6rem;
+    padding: 0.2rem;
     background-color: colors.$background-color;
     display: flex;
     flex-direction: column;
@@ -10,10 +12,11 @@
 
 .sidebar-section {
     background-color: colors.$primary-color;
-    border: 0.1rem solid colors.$secondary-color;
-    height: 15rem;
+    @include mixins.flex-column-centered();
+    height: auto;
     width: auto;
-    margin: 0.25rem;
+    margin: 0.4rem;
+    padding: 0.4rem;
     color: colors.$text-color;
     border-radius: 0.25rem;
 }
