--- a/src/scss/design-tokens/_colors.scss
+++ b/src/scss/design-tokens/_colors.scss
@@ -1,4 +1,5 @@
-$primary-color: #262626;
+$primary-color: #313131;
 $secondary-color: #1DB954;
 $background-color: #191414;
-$text-color: white;
+$text-color: #dedede;
+$text-hover: white;
