--- a/src/scss/tools/_mixins.scss
+++ b/src/scss/tools/_mixins.scss
@@ -7,3 +7,9 @@
     overflow: hidden;
 }
 
+@mixin flex-column-centered {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
