tooltips for sidebar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
 @import "design-tokens/colors";
 @import "components/sidebar",
-        "components/sidebarItem";
+        "components/sidebarItem",
+        "components/tooltip";
