--- a/src/scss/components/_sidebarItem.scss
+++ b/src/scss/components/_sidebarItem.scss
@@ -3,16 +3,17 @@
 
 .sidebar-item--container {
     @include mixins.flex-column-centered();
+    position: relative;
     height: auto;
     width: 85%;
     border-radius: 0.25rem;
     margin: 0.5rem;
-    overflow: hidden;
 }
 
 .sidebar-item--album {
     height: 100%;
     width: 100%;
+    border-radius: 0.25rem;
 }
 
 .sidebar-item--icon:hover {
